--- a/0709_WebStudy01/.settings/org.eclipse.wst.common.component
+++ b/0709_WebStudy01/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="WebStudy01">
+        
+    <wb-module deploy-name="0709_WebStudy01">
+                
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <property name="context-root" value="WebStudy01"/>
-        <property name="java-output-path" value="/WebStudy01/build/classes"/>
+                
+        <property name="java-output-path" value="/0709_WebStudy01/build/classes"/>
+        <property name="context-root" value="0709_WebStudy01"/>
+            
     </wb-module>
+    
 </project-modules>
